--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
 
 install:
   - sudo add-apt-repository -y ppa:beineri/opt-qt532
-  - sudo add-apt-repository -y ppa:kalakris/cmake
+  - sudo add-apt-repository -y ppa:smspillaz/cmake
   - sudo apt-get update
   - sudo dpkg -r cmake cmake-data
   - sudo apt-get -y install cmake
@@ -13,6 +13,9 @@ install:
   - sudo apt-get -y install qt53tools qt53declarative
 
 before_script:
+  - wget http://download.kde.org/stable/frameworks/5.11/extra-cmake-modules-5.11.0.tar.xz
+  - tar -xvf extra-cmake-modules-5.11.0.tar.xz
+  - cd extra-cmake-modules-5.11.0 && cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
   - source /opt/qt53/bin/qt53-env.sh
   - git clone git://github.com/papyros/qml-extras.git
   - git clone git://github.com/papyros/qml-material.git
